fix:fix the services(POST/USER)